# c-template

./: .gitignore  CHANGELOG-NEW.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README-NEW.md  README.md  delete.txt  project-gen.sh  template-setup.sh  test.sh
.github/workflows/: cmake-single-platform.yml  super-linter.yml
child/: .clang-format  CMakeLists.txt  DEV_README.md  Doxyfile  LICENSE  README.md  post-install.sh  test-install.sh
child/.cache/clangd/index/: debug.h.98E6EB12B91B51CC.idx  flags.c.7310069F5FC74F7F.idx  flags.h.69B0A0494ABA8DE1.idx  main.c.F1F9591F0D8A9526.idx  version.h.54824C3C1BD92C8A.idx
child/include/: config.h  config.h.in  debug.h  dictionary.h  dynamic_array.h  flags.h  hash_map.h  invocation.h  linked_list.h  logger.h  messages.h  settings.h  sys_info.h  version.h
child/src/: dictionary.c  dynamicArray.c  flags.c  hash_map.c  invocation.c  linkedList.c  logger.c  main.c  messages.c  settings.c  sys_info.c
child/templates/: gen-c.c  gen-c.h
child/tests/: CMakeLists.txt
child/tools/: gen-c.sh
include/: main.h
src/: main.c
templates/: gen-c.c  gen-c.h
